fixed header alignment at the home page

--- a/assignments/lesson-9/css/home.css
+++ b/assignments/lesson-9/css/home.css
@@ -1,30 +1,40 @@
 /* 64em is also 1028px when basefont is 16px */
 @media only screen and (min-width: 768px ) { /*max-width: 64em */
     header, nav, main, footer{max-width: 1028px;}
+    #logo img{
+        margin-right:0px;
+    }
     #brand{
-        width:100%;
+        width:79%;
         height:95px;
-        border:thin solid green;
+        /*border:thin solid green;*/
+        float:right;
     }
 
+    #site-name, .motto{
+        width:100%;
+        margin:0 auto;
+        text-align:center;
+    }
     #site-name{
-        width:55%;  
-        font-size:3.5em;
-        float:right;
        
-        border:thin solid cyan;
+        font-size:3.5em;
+      
+       
+       /* border:thin solid cyan;*/
      
     }
     
     .motto{
-        font-size:1.3rem;
-      float:right;
-       
+        
+        font-size:1.1rem;
+      
+      /* border:thin solid violet;*/
     }
     .motto p{
         text-align:center;
         padding:0;
-        float:right;
+       
         margin-right:90px;
         
     }
